example/http-route/blue-green/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-blue-green
spec:
  parentRefs:
  - name: hug-gateway
    sectionName: http
  hostnames:
  - "blue-green.haproxy.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: blue
      port: 80
      weight: 9
    - name: green
      port: 80
      weight: 1
